// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-83av23-0 GKiPZ"
>
  <h1
    class="profiles__Title-sc-83av23-1 iDgVYR"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-83av23-2 gWcxCC"
  >
    <li
      class="profiles__Item-sc-83av23-5 jcIJqc"
    >
      <img
        class="profiles__Picture-sc-83av23-4 ePqxkN"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-83av23-3 inwbdW"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-83av23-0 GKiPZ"
>
  <h1
    class="profiles__Title-sc-83av23-1 iDgVYR"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-83av23-2 gWcxCC"
  >
    <li
      class="profiles__Item-sc-83av23-5 jcIJqc"
    >
      <img
        class="profiles__Picture-sc-83av23-4 ePqxkN"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-83av23-3 inwbdW"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
